[package]
name = "esp32-s3-embedded-graphics-mqtt-wifi"
version = "0.1.0"
edition = "2021"
description = "ESP32-S3 async dashboard with ILI9341 display, XPT2046 touch, MQTT, NTP, and RGB LED"

[dependencies]
esp-hal = { version = "1.1.1", features = ["esp32s3", "unstable", "requires-unstable"] }
esp-radio = { version = "0.18.0", features = ["esp32s3", "wifi"] }
esp-rtos = { version = "0.3.0", features = ["esp32s3", "embassy", "esp-alloc", "esp-radio"] }
esp-hal-smartled2 = { version = "0.28.2", features = ["esp32s3"] }
esp-alloc = { version = "0.10.0", default-features = false, features = ["esp32s3", "compat"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }
embassy-net = { version = "0.9.1", features = ["tcp", "udp", "dhcpv4", "dns", "proto-ipv4", "medium-ethernet", "log"] }
embassy-executor = { version = "0.10", default-features = false }
esp-backtrace = { version = "0.19.0", features = ["esp32s3", "panic-handler", "println"] }
esp-println = { version = "0.17.0", features = ["esp32s3", "log-04"] }
embassy-time = { version = "0.5", default-features = false }
embassy-sync = { version = "0.6", default-features = false }
embedded-hal-bus = "0.2"
embedded-graphics = "0.8.2"
minipng = "1.0.0"
mipidsi = "0.10.0"
display-interface-spi = "0.5.0"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
smart-leds-trait = "0.3"
log = "0.4.22"
heapless = "0.8.0"
critical-section = "1.1"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
chrono-tz = { version = "0.9", default-features = false }

[profile.release]
lto = "fat"
opt-level = "s"
codegen-units = 1
debug = false
panic = "abort"
